force-app/main/default/objects/SPEN_DesignQueueRules__c/SPEN_DesignQueueRules__c.object-meta.xml
<CustomObject>
    <description>This custom object is for Connection process. CRMD-6827</description>
    <label>Design Queue Rule Set</label>
    <nameField>
        <displayFormat>DESR-{0000}</displayFormat>
        <label>Design Queue Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Queue Rules Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>