force-app/main/default/objects/SPEN_DesignQueueRules__c/fields/SPEN_CustomerClass__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerClass__c</fullName>
    <description>This field is for Connection process. CRMD-6827</description>
    <label>Customer Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>DO</fullName>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>