force-app/main/default/objects/SPEN_DesignQueueRules__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <description>This field is for Connection process. CRMD-6827</description>
    <label>District</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>all</fullName>
                <label>All</label>
            </value>
            <value>
                <fullName>Ayrshire &amp; Clyde</fullName>
            </value>
            <value>
                <fullName>Central &amp; Fife</fullName>
            </value>
            <value>
                <fullName>Dee Valley &amp; Mid Wales</fullName>
            </value>
            <value>
                <fullName>Dumfries</fullName>
            </value>
            <value>
                <fullName>Edinburgh &amp; Borders</fullName>
            </value>
            <value>
                <fullName>Glasgow &amp; Clyde</fullName>
            </value>
            <value>
                <fullName>Lanarkshire</fullName>
            </value>
            <value>
                <fullName>Merseyside</fullName>
            </value>
            <value>
                <fullName>Mid Cheshire</fullName>
            </value>
            <value>
                <fullName>North Wales</fullName>
            </value>
            <value>
                <fullName>SPD EAST</fullName>
            </value>
            <value>
                <fullName>Wirral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>