force-app/main/default/objects/SPEN_DesignQueueRules__c/fields/SPEN_JobTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>SPEN_JobTypeDescription__c</fullName>
    <description>This field is for Connection process. CRMD-6827</description>
    <label>Job Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UFIPR019</fullName>
                <label>Landlord Supply - Existing Cablehead</label>
            </value>
            <value>
                <fullName>UMANU033</fullName>
                <label>Additional Load</label>
            </value>
            <value>
                <fullName>UMANU034</fullName>
                <label>Additional Load (Syst Ext)</label>
            </value>
            <value>
                <fullName>UFEQU001</fullName>
                <label>CNO CONNECTIONS NOT REPORTED I</label>
            </value>
            <value>
                <fullName>UMANU040</fullName>
                <label>Disconnect/Reconnect (Estimate Required)</label>
            </value>
            <value>
                <fullName>UMANU022</fullName>
                <label>Diversion(s)</label>
            </value>
            <value>
                <fullName>UMANU030</fullName>
                <label>Domestic CONV/REFURB System Ext (Vat)</label>
            </value>
            <value>
                <fullName>UMANU029</fullName>
                <label>Domestic Conversion / Refurb (VAT)</label>
            </value>
            <value>
                <fullName>UMANU047</fullName>
                <label>Earthing</label>
            </value>
            <value>
                <fullName>UMANU048</fullName>
                <label>Earthing (System Ext)</label>
            </value>
            <value>
                <fullName>UMANU024</fullName>
                <label>Embedded Generation</label>
            </value>
            <value>
                <fullName>UMANU049</fullName>
                <label>Embedded Generation - no plots</label>
            </value>
            <value>
                <fullName>UMANU039</fullName>
                <label>Isolator Switch (100 and over)</label>
            </value>
            <value>
                <fullName>UMANU015</fullName>
                <label>Multiple Sup Apps (UMS) New Highway</label>
            </value>
            <value>
                <fullName>UMANU014</fullName>
                <label>Multiple Supply Applications (Metered)</label>
            </value>
            <value>
                <fullName>UMANU028</fullName>
                <label>Multiple Supply Applications(UMS) Existing</label>
            </value>
            <value>
                <fullName>UMANU054</fullName>
                <label>New EV Supply</label>
            </value>
            <value>
                <fullName>UMANU055</fullName>
                <label>New EV Supply (System Extension)</label>
            </value>
            <value>
                <fullName>UMANU031</fullName>
                <label>New Supply</label>
            </value>
            <value>
                <fullName>UMANU032</fullName>
                <label>New Supply (System Extension)</label>
            </value>
            <value>
                <fullName>UMANU041</fullName>
                <label>New Temporary Supply</label>
            </value>
            <value>
                <fullName>UMANU042</fullName>
                <label>New Temporary Supply (System Ext)</label>
            </value>
            <value>
                <fullName>UMANU035</fullName>
                <label>New Unmetered Supply - Existing Highway</label>
            </value>
            <value>
                <fullName>UMANU036</fullName>
                <label>New Unmetered Supply - New Highway</label>
            </value>
            <value>
                <fullName>UNRSW002</fullName>
                <label>NRSWA Diversion 18%</label>
            </value>
            <value>
                <fullName>UNRSW001</fullName>
                <label>NRSWA Diversion 7.5%</label>
            </value>
            <value>
                <fullName>UMANU037</fullName>
                <label>Transfer Unmetered Supply - Existing High</label>
            </value>
            <value>
                <fullName>UMANU038</fullName>
                <label>Transfer Unmetered Supply - New High</label>
            </value>
            <value>
                <fullName>UCIC001</fullName>
                <label>POC\DA</label>
            </value>
            <value>
                <fullName>UMANU009</fullName>
                <label>Disconnection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>