force-app/main/default/objects/SPEN_DesignQueueRules__c/fields/SPEN_MinimumLoad__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MinimumLoad__c</fullName>
    <description>This field is for Connection process. CRMD-6827</description>
    <label>Minimum Load</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>