force-app/main/default/objects/SPEN_DesignQueueRules__c/fields/SPEN_MinimumPlot__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MinimumPlot__c</fullName>
    <description>This field is for Connection process. CRMD-6827</description>
    <label>Minimum Plot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>