force-app/main/default/objects/SPEN_DesignQueueRules__c/fields/SPEN_SFQueueName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SFQueueName__c</fullName>
    <description>CRMD-5779</description>
    <label>SF Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>