force-app/main/default/objects/SPEN_DesignQueueRules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_SFQueueName__c</columns>
    <columns>SPEN_CustomerClass__c</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_JobTypeDescription__c</columns>
    <columns>SPEN_MinimumLoad__c</columns>
    <columns>SPEN_MaximumLoad__c</columns>
    <columns>SPEN_MinimumPlot__c</columns>
    <columns>SPEN_MaximumPlot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_SFQueueName__c</field>
        <operation>contains</operation>
        <value>132</value>
    </filters>
    <label>All</label>
</ListView>